--- a/calci.css
+++ b/calci.css
@@ -9,7 +9,7 @@ body {
 }
 
 .calculator {
-    width: 260px;
+    width: 320px;
     padding: 10px;
     background-color: #fff;
     border-radius: 10px;
@@ -28,10 +28,27 @@ body {
     margin-bottom: 10px;
 }
 
+.buttons-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.number-buttons {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 5px;
+}
+
+.operation-buttons {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: 10px;
+}
+
 .button {
     width: 60px;
     height: 60px;
-    margin: 5px;
     font-size: 20px;
     border: none;
     border-radius: 5px;
@@ -55,5 +72,5 @@ body {
 }
 
 .button.zero {
-    width: 130px;
+    grid-column: span 2;
 }
